[FIX] web: fix kanban dropdown visibility

--- a/addons/web/static/src/legacy/scss/kanban_view.scss
+++ b/addons/web/static/src/legacy/scss/kanban_view.scss
@@ -236,17 +236,16 @@
         // Kanban Record - Dropdown
         .o_dropdown_kanban {
             @include o-position-absolute($o-kanban-inside-vgutter, $o-kanban-inside-hgutter);
-            visibility: hidden;
             margin: (-$o-kanban-inside-vgutter) (-$o-kanban-inside-hgutter) 0 0;
-            @include media-breakpoint-down(sm) {
-                visibility: visible;
-            }
-
             .dropdown-toggle {
+                visibility: hidden;
+                @include media-breakpoint-down(sm) {
+                    visibility: visible;
+                }
                 @include o-kanban-dropdown;
-            }
-            &.show .dropdown-toggle {
-                @include o-kanban-dropdown-open;
+                &.show {
+                    @include o-kanban-dropdown-open;
+                }
             }
             .dropdown-menu {
                 @include o-kanban-dropdown-menu;
@@ -254,7 +253,7 @@
             }
         }
 
-        &:hover .o_dropdown_kanban, .o_dropdown_kanban.show {
+        &:hover .dropdown-toggle, .dropdown-toggle.show {
             visibility: visible;
         }
 
@@ -464,12 +463,14 @@
                 margin-left: $o-kanban-inside-hgutter*2;
             }
 
-            &:hover .o_kanban_config, .o_kanban_config.show {
+            .o_kanban_config .dropdown-toggle {
+                visibility: hidden;
+            }
+            &:hover .dropdown-toggle, .o_kanban_config .dropdown-toggle.show {
                 visibility: visible;
             }
 
             .o_kanban_config {
-                visibility: hidden;
 
                 i {
                     @include o-kanban-icon;
