--- a/odoo/addons/base/static/src/css/modules.css
+++ b/odoo/addons/base/static/src/css/modules.css
@@ -17,13 +17,13 @@
     display: flex;
 }
 
-.o_modules_kanban.o_kanban_view .o_kanban_record .o_dropdown_kanban {
+.o_modules_kanban.o_kanban_view .o_kanban_record .dropdown-toggle {
     visibility: visible;
     opacity: 0.5;
 }
 
-.o_modules_kanban.o_kanban_view .o_kanban_record:hover .o_dropdown_kanban,
-.o_modules_kanban.o_kanban_view .o_kanban_record .o_dropdown_kanban.show {
+.o_modules_kanban.o_kanban_view .o_kanban_record:hover .dropdown-toggle,
+.o_modules_kanban.o_kanban_view .o_kanban_record .dropdown-toggle.show {
     opacity: 1;
 }
 
